# rust_matrix

./: Cargo.toml
src/: main.rs  matrix.rs
src/matrix/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
